# uv-telegram-bot

./: .env.example  .fastmigrate  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  run
.github/workflows/: joefg-bot.yml
app/: auth.py  config.py  error.py  main.py
app/auth/: admin.py  chat.py
app/commands/: help.py  ping.py  start.py
app/conversations/: account.py
app/db/: README.md  database.py
app/db/migrations/: 0000-init.sql  0001-users.sql
app/models/: user.py
tests/unit/models/: test_ping.py  test_user.py
